--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "clsx": "^1.2.1"
+        "clsx": "^1.2.1",
+        "highlight.js": "^11.7.0"
     }
 }
